--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Hi! My name is Roberto Monplaisir</h1>
-    <p class="lead">I am from Brooklyn.</p>
+    <h1 class="display-4">Hi! My name is Robert Monplaisir</h1>
+    <p class="lead">I am from Brookly, NY.</p>
     <h3>Example heading <span class="badge badge-secondary">Contact Me</span></h3>
     <ul class="list-group">
       <li class="list-group-item">My GitHub username is castedcrown84</li>
